plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

sourceCompatibility = 11
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    mavenCentral()
}
tasks.withType(JavaCompile) {
    options.compilerArgs << "--add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.nodeinfo=ALL-UNNAMED"
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
    testImplementation 'com.codeborne:selenide:5.23.3'
}

test {
    useJUnitPlatform()
}